<resources>
    <string name="app_name">Music Player</string>
    <string name="artist_details_label">Artist details</string>
    <string name="song_details_label">Song details</string>
    <string name="artists_list_label">Artists list</string>
    <string name="payment_label">Payment</string>

    <string name="screen_play">Screen: Play now!</string>
    <string name="screen_artist_detail">Screen: Artist detail</string>
    <string name="screen_artists_list">Screen: Artists list</string>
    <string name="screen_song_detail">Screen: Song detail</string>
    <string name="screen_payment">Screen: Payment</string>

    <string name="screen_play_description">Description: Displaying song name, artist and progressbar</string>
    <string name="screen_artist_detail_description">Description: Displaying name of the artist short biography and list of albums and songs</string>
    <string name="screen_artists_list_description">Description: Displaying names of the artists, sorted alphabetically</string>
    <string name="screen_song_detail_description">Description: Displaying namee of the artists, lyrics and info about the album</string>
    <string name="screen_payment_description">Description: Allows to buy single song or album, displaying many payment options and price</string>
    <string name="screen_payment_usage">To implement payments in Android app can be use Android Pay API\n
        setup and configuration is described here: https://developers.google.com/android-pay/setup
    </string>

    <string name="button_artist_detail">Artist detail</string>
    <string name="button_song_detail">Song detail</string>
    <string name="button_artists_list">Artist list</string>
    <string name="button_play_now">Play now</string>
    <string name="button_payment">Payment</string>
</resources>
