<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_payment"
    tools:context="com.gmail.grzywaczewskijakub.musicapp.musicapp.PaymentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/screen_payment"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/screen_payment_description"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/screen_payment_usage"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_artist_detail"
            android:layout_margin="5dp"
            android:textColor="@color/primaryButtonTextColor"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_artist_detail" />

        <Button
            android:id="@+id/button_song_detail"
            android:layout_margin="5dp"
            android:textColor="@color/primaryButtonTextColor"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_song_detail" />

    </LinearLayout>


</LinearLayout>
