<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/view_artist_detail"
    tools:context="com.gmail.grzywaczewskijakub.musicapp.musicapp.ArtistDetail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/screen_artist_detail"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/screen_artist_detail_description"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_artists_list"
            android:layout_margin="5dp"
            android:textColor="@color/primaryButtonTextColor"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artists_list_label" />

        <Button
            android:id="@+id/button_payment"
            android:layout_margin="5dp"
            android:textColor="@color/primaryButtonTextColor"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_payment" />

    </LinearLayout>

</LinearLayout>
